ubooquity/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ubooquity
  labels:
    app: book
spec:
  ports:
  - name: http
    port: 2202
  - name: admin
    port: 2203
  selector:
    app: book
