ubooquity/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ubooquity
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # traefik.frontend.passHostHeader: "true"
    # traefik.backend.loadbalancer.stickey: "true"
    # ingress.kubernetes.io/rewrite-target: "/ubooquity"
spec:
  rules:
  - host: file.leangeder.eu
    http:
      paths:
      - path: /Books/admin
        backend:
          serviceName: ubooquity
          servicePort: admin
      - path: /Books
        backend:
          serviceName: ubooquity
          servicePort: http
